etapa2/parser.output
Terminals unused in grammar

    TK_PR_THEN
    TK_PR_FOREACH
    TK_PR_SWITCH
    TK_PR_CASE
    TK_PR_CLASS
    TK_PR_PRIVATE
    TK_PR_PUBLIC
    TK_PR_PROTECTED
    TK_PR_END
    TK_PR_DEFAULT
    TOKEN_ERRO


Grammar

    0 $accept: programa $end

    1 programa: programa var_global
    2         | programa funcao
    3         | %empty

    4 tipo: TK_PR_INT
    5     | TK_PR_FLOAT
    6     | TK_PR_CHAR
    7     | TK_PR_BOOL
    8     | TK_PR_STRING

    9 estatico: TK_PR_STATIC
   10         | %empty

   11 constante: TK_PR_CONST
   12          | %empty

   13 vetor: '[' TK_LIT_INT ']'
   14      | %empty

   15 var_global: estatico tipo TK_IDENTIFICADOR vetor lista_identificadores_g ';'

   16 lista_identificadores_g: lista_identificadores_g ',' TK_IDENTIFICADOR vetor
   17                        | %empty

   18 funcao: cabecalho bloco_cmd

   19 cabecalho: estatico tipo TK_IDENTIFICADOR '(' lista_parametros ')'

   20 lista_parametros: constante tipo TK_IDENTIFICADOR mais_parametros
   21                 | %empty

   22 mais_parametros: ',' constante tipo TK_IDENTIFICADOR mais_parametros
   23                | %empty

   24 bloco_cmd: '{' lista_comandos '}'

   25 lista_comandos: lista_comandos comando
   26               | %empty

   27 comando: bloco_cmd ';'
   28        | declaracao_variavel ';'
   29        | atribuicao ';'
   30        | chamada_de_funcao ';'
   31        | shift ';'
   32        | retorno ';'
   33        | TK_PR_BREAK ';'
   34        | TK_PR_CONTINUE ';'
   35        | entrada ';'
   36        | saida ';'
   37        | controle_fluxo ';'

   38 declaracao_variavel: estatico constante tipo TK_IDENTIFICADOR inicializa_variavel lista_identificadores_l

   39 lista_identificadores_l: lista_identificadores_l ',' TK_IDENTIFICADOR inicializa_variavel
   40                        | %empty

   41 inicializa_variavel: TK_OC_LE identificador_ou_literal
   42                    | %empty

   43 literal: TK_LIT_TRUE
   44        | TK_LIT_FALSE
   45        | TK_LIT_INT
   46        | TK_LIT_FLOAT
   47        | TK_LIT_STRING
   48        | TK_LIT_CHAR

   49 identificador_ou_literal: literal
   50                         | TK_IDENTIFICADOR

   51 acesso_vetor: '[' expressao ']'
   52             | %empty

   53 atribuicao: TK_IDENTIFICADOR acesso_vetor '=' expressao

   54 entrada: TK_PR_INPUT TK_IDENTIFICADOR

   55 saida: TK_PR_OUTPUT identificador_ou_literal

   56 parametro_chamada_funcao: expressao mais_parametros_chamada_funcao
   57                         | %empty

   58 mais_parametros_chamada_funcao: ',' expressao mais_parametros_chamada_funcao
   59                               | %empty

   60 chamada_de_funcao: TK_IDENTIFICADOR '(' parametro_chamada_funcao ')'

   61 shift: TK_IDENTIFICADOR acesso_vetor token_shift TK_LIT_INT

   62 token_shift: TK_OC_SL
   63            | TK_OC_SR

   64 retorno: TK_PR_RETURN expressao

   65 controle_fluxo: if
   66               | for
   67               | while

   68 if: TK_PR_IF '(' expressao ')' bloco_cmd else

   69 else: TK_PR_ELSE bloco_cmd
   70     | %empty

   71 for: TK_PR_FOR '(' atribuicao ':' expressao ':' atribuicao ')' bloco_cmd

   72 while: TK_PR_WHILE '(' expressao ')' TK_PR_DO bloco_cmd

   73 literal_numerico: TK_LIT_INT
   74                 | TK_LIT_FLOAT

   75 operandos_aritmeticos: literal_numerico
   76                      | chamada_de_funcao
   77                      | TK_IDENTIFICADOR acesso_vetor
   78                      | expressao_aritmetica
   79                      | '(' expressao_aritmetica ')'

   80 expressao_aritmetica: '+' operandos_aritmeticos
   81                     | '-' operandos_aritmeticos
   82                     | '&' operandos_aritmeticos
   83                     | '*' operandos_aritmeticos
   84                     | '#' operandos_aritmeticos
   85                     | operandos_aritmeticos '+' operandos_aritmeticos
   86                     | operandos_aritmeticos '-' operandos_aritmeticos
   87                     | operandos_aritmeticos '^' operandos_aritmeticos
   88                     | operandos_aritmeticos '*' operandos_aritmeticos
   89                     | operandos_aritmeticos '/' operandos_aritmeticos
   90                     | operandos_aritmeticos '%' operandos_aritmeticos
   91                     | operandos_aritmeticos '&' operandos_aritmeticos
   92                     | operandos_aritmeticos '|' operandos_aritmeticos

   93 literal_booleano: TK_LIT_TRUE
   94                 | TK_LIT_FALSE

   95 operandos_booleanos: TK_IDENTIFICADOR acesso_vetor
   96                    | literal_booleano
   97                    | expressao_booleana
   98                    | '(' expressao_booleana ')'

   99 expressao_booleana: '!' operandos_booleanos
  100                   | '?' operandos_booleanos
  101                   | operandos_aritmeticos '<' operandos_aritmeticos
  102                   | operandos_aritmeticos '>' operandos_aritmeticos
  103                   | operandos_aritmeticos TK_OC_EQ operandos_aritmeticos
  104                   | operandos_aritmeticos TK_OC_NE operandos_aritmeticos
  105                   | operandos_aritmeticos TK_OC_GE operandos_aritmeticos
  106                   | operandos_aritmeticos TK_OC_LE operandos_aritmeticos
  107                   | operandos_booleanos TK_OC_AND operandos_booleanos
  108                   | operandos_booleanos TK_OC_OR operandos_booleanos

  109 expressao: TK_IDENTIFICADOR acesso_vetor
  110          | chamada_de_funcao
  111          | literal_numerico
  112          | expressao_aritmetica
  113          | expressao_booleana
  114          | expressao '?' expressao ':' expressao


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 99
    '#' (35) 84
    '%' (37) 90
    '&' (38) 82 91
    '(' (40) 19 60 68 71 72 79 98
    ')' (41) 19 60 68 71 72 79 98
    '*' (42) 83 88
    '+' (43) 80 85
    ',' (44) 16 22 39 58
    '-' (45) 81 86
    '/' (47) 89
    ':' (58) 71 114
    ';' (59) 15 27 28 29 30 31 32 33 34 35 36 37
    '<' (60) 101
    '=' (61) 53
    '>' (62) 102
    '?' (63) 100 114
    '[' (91) 13 51
    ']' (93) 13 51
    '^' (94) 87
    '{' (123) 24
    '|' (124) 92
    '}' (125) 24
    error (256)
    TK_PR_INT (258) 4
    TK_PR_FLOAT (259) 5
    TK_PR_BOOL (260) 7
    TK_PR_CHAR (261) 6
    TK_PR_STRING (262) 8
    TK_PR_IF (263) 68
    TK_PR_THEN (264)
    TK_PR_ELSE (265) 69
    TK_PR_WHILE (266) 72
    TK_PR_DO (267) 72
    TK_PR_INPUT (268) 54
    TK_PR_OUTPUT (269) 55
    TK_PR_RETURN (270) 64
    TK_PR_CONST (271) 11
    TK_PR_STATIC (272) 9
    TK_PR_FOREACH (273)
    TK_PR_FOR (274) 71
    TK_PR_SWITCH (275)
    TK_PR_CASE (276)
    TK_PR_BREAK (277) 33
    TK_PR_CONTINUE (278) 34
    TK_PR_CLASS (279)
    TK_PR_PRIVATE (280)
    TK_PR_PUBLIC (281)
    TK_PR_PROTECTED (282)
    TK_PR_END (283)
    TK_PR_DEFAULT (284)
    TK_OC_LE (285) 41 106
    TK_OC_GE (286) 105
    TK_OC_EQ (287) 103
    TK_OC_NE (288) 104
    TK_OC_AND (289) 107
    TK_OC_OR (290) 108
    TK_OC_SL (291) 62
    TK_OC_SR (292) 63
    TK_LIT_INT (293) 13 45 61 73
    TK_LIT_FLOAT (294) 46 74
    TK_LIT_FALSE (295) 44 94
    TK_LIT_TRUE (296) 43 93
    TK_LIT_CHAR (297) 48
    TK_LIT_STRING (298) 47
    TK_IDENTIFICADOR (299) 15 16 19 20 22 38 39 50 53 54 60 61 77 95 109
    TOKEN_ERRO (300)
    avaliacao_logica (301)
    endereco_variavel (302)
    valor_ponteiro (303)
    inverte_sinal (304)


Nonterminals, with rules where they appear

    $accept (73)
        on left: 0
    programa (74)
        on left: 1 2 3
        on right: 0 1 2
    tipo (75)
        on left: 4 5 6 7 8
        on right: 15 19 20 22 38
    estatico (76)
        on left: 9 10
        on right: 15 19 38
    constante (77)
        on left: 11 12
        on right: 20 22 38
    vetor (78)
        on left: 13 14
        on right: 15 16
    var_global (79)
        on left: 15
        on right: 1
    lista_identificadores_g (80)
        on left: 16 17
        on right: 15 16
    funcao (81)
        on left: 18
        on right: 2
    cabecalho (82)
        on left: 19
        on right: 18
    lista_parametros (83)
        on left: 20 21
        on right: 19
    mais_parametros (84)
        on left: 22 23
        on right: 20 22
    bloco_cmd (85)
        on left: 24
        on right: 18 27 68 69 71 72
    lista_comandos (86)
        on left: 25 26
        on right: 24 25
    comando (87)
        on left: 27 28 29 30 31 32 33 34 35 36 37
        on right: 25
    declaracao_variavel (88)
        on left: 38
        on right: 28
    lista_identificadores_l (89)
        on left: 39 40
        on right: 38 39
    inicializa_variavel (90)
        on left: 41 42
        on right: 38 39
    literal (91)
        on left: 43 44 45 46 47 48
        on right: 49
    identificador_ou_literal (92)
        on left: 49 50
        on right: 41 55
    acesso_vetor (93)
        on left: 51 52
        on right: 53 61 77 95 109
    atribuicao (94)
        on left: 53
        on right: 29 71
    entrada (95)
        on left: 54
        on right: 35
    saida (96)
        on left: 55
        on right: 36
    parametro_chamada_funcao (97)
        on left: 56 57
        on right: 60
    mais_parametros_chamada_funcao (98)
        on left: 58 59
        on right: 56 58
    chamada_de_funcao (99)
        on left: 60
        on right: 30 76 110
    shift (100)
        on left: 61
        on right: 31
    token_shift (101)
        on left: 62 63
        on right: 61
    retorno (102)
        on left: 64
        on right: 32
    controle_fluxo (103)
        on left: 65 66 67
        on right: 37
    if (104)
        on left: 68
        on right: 65
    else (105)
        on left: 69 70
        on right: 68
    for (106)
        on left: 71
        on right: 66
    while (107)
        on left: 72
        on right: 67
    literal_numerico (108)
        on left: 73 74
        on right: 75 111
    operandos_aritmeticos (109)
        on left: 75 76 77 78 79
        on right: 80 81 82 83 84 85 86 87 88 89 90 91 92 101 102 103 104 105 106
    expressao_aritmetica (110)
        on left: 80 81 82 83 84 85 86 87 88 89 90 91 92
        on right: 78 79 112
    literal_booleano (111)
        on left: 93 94
        on right: 96
    operandos_booleanos (112)
        on left: 95 96 97 98
        on right: 99 100 107 108
    expressao_booleana (113)
        on left: 99 100 101 102 103 104 105 106 107 108
        on right: 97 98 113
    expressao (114)
        on left: 109 110 111 112 113 114
        on right: 51 53 56 58 64 68 71 72 114


State 0

    0 $accept: . programa $end

    $default  reduce using rule 3 (programa)

    programa  go to state 1


State 1

    0 $accept: programa . $end
    1 programa: programa . var_global
    2         | programa . funcao

    $end          shift, and go to state 2
    TK_PR_STATIC  shift, and go to state 3

    $default  reduce using rule 10 (estatico)

    estatico    go to state 4
    var_global  go to state 5
    funcao      go to state 6
    cabecalho   go to state 7


State 2

    0 $accept: programa $end .

    $default  accept


State 3

    9 estatico: TK_PR_STATIC .

    $default  reduce using rule 9 (estatico)


State 4

   15 var_global: estatico . tipo TK_IDENTIFICADOR vetor lista_identificadores_g ';'
   19 cabecalho: estatico . tipo TK_IDENTIFICADOR '(' lista_parametros ')'

    TK_PR_INT     shift, and go to state 8
    TK_PR_FLOAT   shift, and go to state 9
    TK_PR_BOOL    shift, and go to state 10
    TK_PR_CHAR    shift, and go to state 11
    TK_PR_STRING  shift, and go to state 12

    tipo  go to state 13


State 5

    1 programa: programa var_global .

    $default  reduce using rule 1 (programa)


State 6

    2 programa: programa funcao .

    $default  reduce using rule 2 (programa)


State 7

   18 funcao: cabecalho . bloco_cmd

    '{'  shift, and go to state 14

    bloco_cmd  go to state 15


State 8

    4 tipo: TK_PR_INT .

    $default  reduce using rule 4 (tipo)


State 9

    5 tipo: TK_PR_FLOAT .

    $default  reduce using rule 5 (tipo)


State 10

    7 tipo: TK_PR_BOOL .

    $default  reduce using rule 7 (tipo)


State 11

    6 tipo: TK_PR_CHAR .

    $default  reduce using rule 6 (tipo)


State 12

    8 tipo: TK_PR_STRING .

    $default  reduce using rule 8 (tipo)


State 13

   15 var_global: estatico tipo . TK_IDENTIFICADOR vetor lista_identificadores_g ';'
   19 cabecalho: estatico tipo . TK_IDENTIFICADOR '(' lista_parametros ')'

    TK_IDENTIFICADOR  shift, and go to state 16


State 14

   24 bloco_cmd: '{' . lista_comandos '}'

    $default  reduce using rule 26 (lista_comandos)

    lista_comandos  go to state 17


State 15

   18 funcao: cabecalho bloco_cmd .

    $default  reduce using rule 18 (funcao)


State 16

   15 var_global: estatico tipo TK_IDENTIFICADOR . vetor lista_identificadores_g ';'
   19 cabecalho: estatico tipo TK_IDENTIFICADOR . '(' lista_parametros ')'

    '['  shift, and go to state 18
    '('  shift, and go to state 19

    $default  reduce using rule 14 (vetor)

    vetor  go to state 20


State 17

   24 bloco_cmd: '{' lista_comandos . '}'
   25 lista_comandos: lista_comandos . comando

    TK_PR_IF          shift, and go to state 21
    TK_PR_WHILE       shift, and go to state 22
    TK_PR_INPUT       shift, and go to state 23
    TK_PR_OUTPUT      shift, and go to state 24
    TK_PR_RETURN      shift, and go to state 25
    TK_PR_STATIC      shift, and go to state 3
    TK_PR_FOR         shift, and go to state 26
    TK_PR_BREAK       shift, and go to state 27
    TK_PR_CONTINUE    shift, and go to state 28
    TK_IDENTIFICADOR  shift, and go to state 29
    '{'               shift, and go to state 14
    '}'               shift, and go to state 30

    $default  reduce using rule 10 (estatico)

    estatico             go to state 31
    bloco_cmd            go to state 32
    comando              go to state 33
    declaracao_variavel  go to state 34
    atribuicao           go to state 35
    entrada              go to state 36
    saida                go to state 37
    chamada_de_funcao    go to state 38
    shift                go to state 39
    retorno              go to state 40
    controle_fluxo       go to state 41
    if                   go to state 42
    for                  go to state 43
    while                go to state 44


State 18

   13 vetor: '[' . TK_LIT_INT ']'

    TK_LIT_INT  shift, and go to state 45


State 19

   19 cabecalho: estatico tipo TK_IDENTIFICADOR '(' . lista_parametros ')'

    TK_PR_CONST  shift, and go to state 46

    ')'       reduce using rule 21 (lista_parametros)
    $default  reduce using rule 12 (constante)

    constante         go to state 47
    lista_parametros  go to state 48


State 20

   15 var_global: estatico tipo TK_IDENTIFICADOR vetor . lista_identificadores_g ';'

    $default  reduce using rule 17 (lista_identificadores_g)

    lista_identificadores_g  go to state 49


State 21

   68 if: TK_PR_IF . '(' expressao ')' bloco_cmd else

    '('  shift, and go to state 50


State 22

   72 while: TK_PR_WHILE . '(' expressao ')' TK_PR_DO bloco_cmd

    '('  shift, and go to state 51


State 23

   54 entrada: TK_PR_INPUT . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 52


State 24

   55 saida: TK_PR_OUTPUT . identificador_ou_literal

    TK_LIT_INT        shift, and go to state 53
    TK_LIT_FLOAT      shift, and go to state 54
    TK_LIT_FALSE      shift, and go to state 55
    TK_LIT_TRUE       shift, and go to state 56
    TK_LIT_CHAR       shift, and go to state 57
    TK_LIT_STRING     shift, and go to state 58
    TK_IDENTIFICADOR  shift, and go to state 59

    literal                   go to state 60
    identificador_ou_literal  go to state 61


State 25

   64 retorno: TK_PR_RETURN . expressao

    TK_LIT_INT        shift, and go to state 62
    TK_LIT_FLOAT      shift, and go to state 63
    TK_LIT_FALSE      shift, and go to state 64
    TK_LIT_TRUE       shift, and go to state 65
    TK_IDENTIFICADOR  shift, and go to state 66
    '?'               shift, and go to state 67
    '&'               shift, and go to state 68
    '+'               shift, and go to state 69
    '-'               shift, and go to state 70
    '*'               shift, and go to state 71
    '#'               shift, and go to state 72
    '!'               shift, and go to state 73
    '('               shift, and go to state 74

    chamada_de_funcao      go to state 75
    literal_numerico       go to state 76
    operandos_aritmeticos  go to state 77
    expressao_aritmetica   go to state 78
    literal_booleano       go to state 79
    operandos_booleanos    go to state 80
    expressao_booleana     go to state 81
    expressao              go to state 82


State 26

   71 for: TK_PR_FOR . '(' atribuicao ':' expressao ':' atribuicao ')' bloco_cmd

    '('  shift, and go to state 83


State 27

   33 comando: TK_PR_BREAK . ';'

    ';'  shift, and go to state 84


State 28

   34 comando: TK_PR_CONTINUE . ';'

    ';'  shift, and go to state 85


State 29

   53 atribuicao: TK_IDENTIFICADOR . acesso_vetor '=' expressao
   60 chamada_de_funcao: TK_IDENTIFICADOR . '(' parametro_chamada_funcao ')'
   61 shift: TK_IDENTIFICADOR . acesso_vetor token_shift TK_LIT_INT

    '['  shift, and go to state 86
    '('  shift, and go to state 87

    $default  reduce using rule 52 (acesso_vetor)

    acesso_vetor  go to state 88


State 30

   24 bloco_cmd: '{' lista_comandos '}' .

    $default  reduce using rule 24 (bloco_cmd)


State 31

   38 declaracao_variavel: estatico . constante tipo TK_IDENTIFICADOR inicializa_variavel lista_identificadores_l

    TK_PR_CONST  shift, and go to state 46

    $default  reduce using rule 12 (constante)

    constante  go to state 89


State 32

   27 comando: bloco_cmd . ';'

    ';'  shift, and go to state 90


State 33

   25 lista_comandos: lista_comandos comando .

    $default  reduce using rule 25 (lista_comandos)


State 34

   28 comando: declaracao_variavel . ';'

    ';'  shift, and go to state 91


State 35

   29 comando: atribuicao . ';'

    ';'  shift, and go to state 92


State 36

   35 comando: entrada . ';'

    ';'  shift, and go to state 93


State 37

   36 comando: saida . ';'

    ';'  shift, and go to state 94


State 38

   30 comando: chamada_de_funcao . ';'

    ';'  shift, and go to state 95


State 39

   31 comando: shift . ';'

    ';'  shift, and go to state 96


State 40

   32 comando: retorno . ';'

    ';'  shift, and go to state 97


State 41

   37 comando: controle_fluxo . ';'

    ';'  shift, and go to state 98


State 42

   65 controle_fluxo: if .

    $default  reduce using rule 65 (controle_fluxo)


State 43

   66 controle_fluxo: for .

    $default  reduce using rule 66 (controle_fluxo)


State 44

   67 controle_fluxo: while .

    $default  reduce using rule 67 (controle_fluxo)


State 45

   13 vetor: '[' TK_LIT_INT . ']'

    ']'  shift, and go to state 99


State 46

   11 constante: TK_PR_CONST .

    $default  reduce using rule 11 (constante)


State 47

   20 lista_parametros: constante . tipo TK_IDENTIFICADOR mais_parametros

    TK_PR_INT     shift, and go to state 8
    TK_PR_FLOAT   shift, and go to state 9
    TK_PR_BOOL    shift, and go to state 10
    TK_PR_CHAR    shift, and go to state 11
    TK_PR_STRING  shift, and go to state 12

    tipo  go to state 100


State 48

   19 cabecalho: estatico tipo TK_IDENTIFICADOR '(' lista_parametros . ')'

    ')'  shift, and go to state 101


State 49

   15 var_global: estatico tipo TK_IDENTIFICADOR vetor lista_identificadores_g . ';'
   16 lista_identificadores_g: lista_identificadores_g . ',' TK_IDENTIFICADOR vetor

    ';'  shift, and go to state 102
    ','  shift, and go to state 103


State 50

   68 if: TK_PR_IF '(' . expressao ')' bloco_cmd else

    TK_LIT_INT        shift, and go to state 62
    TK_LIT_FLOAT      shift, and go to state 63
    TK_LIT_FALSE      shift, and go to state 64
    TK_LIT_TRUE       shift, and go to state 65
    TK_IDENTIFICADOR  shift, and go to state 66
    '?'               shift, and go to state 67
    '&'               shift, and go to state 68
    '+'               shift, and go to state 69
    '-'               shift, and go to state 70
    '*'               shift, and go to state 71
    '#'               shift, and go to state 72
    '!'               shift, and go to state 73
    '('               shift, and go to state 74

    chamada_de_funcao      go to state 75
    literal_numerico       go to state 76
    operandos_aritmeticos  go to state 77
    expressao_aritmetica   go to state 78
    literal_booleano       go to state 79
    operandos_booleanos    go to state 80
    expressao_booleana     go to state 81
    expressao              go to state 104


State 51

   72 while: TK_PR_WHILE '(' . expressao ')' TK_PR_DO bloco_cmd

    TK_LIT_INT        shift, and go to state 62
    TK_LIT_FLOAT      shift, and go to state 63
    TK_LIT_FALSE      shift, and go to state 64
    TK_LIT_TRUE       shift, and go to state 65
    TK_IDENTIFICADOR  shift, and go to state 66
    '?'               shift, and go to state 67
    '&'               shift, and go to state 68
    '+'               shift, and go to state 69
    '-'               shift, and go to state 70
    '*'               shift, and go to state 71
    '#'               shift, and go to state 72
    '!'               shift, and go to state 73
    '('               shift, and go to state 74

    chamada_de_funcao      go to state 75
    literal_numerico       go to state 76
    operandos_aritmeticos  go to state 77
    expressao_aritmetica   go to state 78
    literal_booleano       go to state 79
    operandos_booleanos    go to state 80
    expressao_booleana     go to state 81
    expressao              go to state 105


State 52

   54 entrada: TK_PR_INPUT TK_IDENTIFICADOR .

    $default  reduce using rule 54 (entrada)


State 53

   45 literal: TK_LIT_INT .

    $default  reduce using rule 45 (literal)


State 54

   46 literal: TK_LIT_FLOAT .

    $default  reduce using rule 46 (literal)


State 55

   44 literal: TK_LIT_FALSE .

    $default  reduce using rule 44 (literal)


State 56

   43 literal: TK_LIT_TRUE .

    $default  reduce using rule 43 (literal)


State 57

   48 literal: TK_LIT_CHAR .

    $default  reduce using rule 48 (literal)


State 58

   47 literal: TK_LIT_STRING .

    $default  reduce using rule 47 (literal)


State 59

   50 identificador_ou_literal: TK_IDENTIFICADOR .

    $default  reduce using rule 50 (identificador_ou_literal)


State 60

   49 identificador_ou_literal: literal .

    $default  reduce using rule 49 (identificador_ou_literal)


State 61

   55 saida: TK_PR_OUTPUT identificador_ou_literal .

    $default  reduce using rule 55 (saida)


State 62

   73 literal_numerico: TK_LIT_INT .

    $default  reduce using rule 73 (literal_numerico)


State 63

   74 literal_numerico: TK_LIT_FLOAT .

    $default  reduce using rule 74 (literal_numerico)


State 64

   94 literal_booleano: TK_LIT_FALSE .

    $default  reduce using rule 94 (literal_booleano)


State 65

   93 literal_booleano: TK_LIT_TRUE .

    $default  reduce using rule 93 (literal_booleano)


State 66

   60 chamada_de_funcao: TK_IDENTIFICADOR . '(' parametro_chamada_funcao ')'
   77 operandos_aritmeticos: TK_IDENTIFICADOR . acesso_vetor
   95 operandos_booleanos: TK_IDENTIFICADOR . acesso_vetor
  109 expressao: TK_IDENTIFICADOR . acesso_vetor

    '['  shift, and go to state 86
    '('  shift, and go to state 87

    $default  reduce using rule 52 (acesso_vetor)

    acesso_vetor  go to state 106


State 67

  100 expressao_booleana: '?' . operandos_booleanos

    TK_LIT_INT        shift, and go to state 62
    TK_LIT_FLOAT      shift, and go to state 63
    TK_LIT_FALSE      shift, and go to state 64
    TK_LIT_TRUE       shift, and go to state 65
    TK_IDENTIFICADOR  shift, and go to state 107
    '?'               shift, and go to state 67
    '&'               shift, and go to state 68
    '+'               shift, and go to state 69
    '-'               shift, and go to state 70
    '*'               shift, and go to state 71
    '#'               shift, and go to state 72
    '!'               shift, and go to state 73
    '('               shift, and go to state 74

    chamada_de_funcao      go to state 108
    literal_numerico       go to state 109
    operandos_aritmeticos  go to state 77
    expressao_aritmetica   go to state 110
    literal_booleano       go to state 79
    operandos_booleanos    go to state 111
    expressao_booleana     go to state 112


State 68

   82 expressao_aritmetica: '&' . operandos_aritmeticos

    TK_LIT_INT        shift, and go to state 62
    TK_LIT_FLOAT      shift, and go to state 63
    TK_IDENTIFICADOR  shift, and go to state 113
    '&'               shift, and go to state 68
    '+'               shift, and go to state 69
    '-'               shift, and go to state 70
    '*'               shift, and go to state 71
    '#'               shift, and go to state 72
    '('               shift, and go to state 114

    chamada_de_funcao      go to state 108
    literal_numerico       go to state 109
    operandos_aritmeticos  go to state 115
    expressao_aritmetica   go to state 110


State 69

   80 expressao_aritmetica: '+' . operandos_aritmeticos

    TK_LIT_INT        shift, and go to state 62
    TK_LIT_FLOAT      shift, and go to state 63
    TK_IDENTIFICADOR  shift, and go to state 113
    '&'               shift, and go to state 68
    '+'               shift, and go to state 69
    '-'               shift, and go to state 70
    '*'               shift, and go to state 71
    '#'               shift, and go to state 72
    '('               shift, and go to state 114

    chamada_de_funcao      go to state 108
    literal_numerico       go to state 109
    operandos_aritmeticos  go to state 116
    expressao_aritmetica   go to state 110


State 70

   81 expressao_aritmetica: '-' . operandos_aritmeticos

    TK_LIT_INT        shift, and go to state 62
    TK_LIT_FLOAT      shift, and go to state 63
    TK_IDENTIFICADOR  shift, and go to state 113
    '&'               shift, and go to state 68
    '+'               shift, and go to state 69
    '-'               shift, and go to state 70
    '*'               shift, and go to state 71
    '#'               shift, and go to state 72
    '('               shift, and go to state 114

    chamada_de_funcao      go to state 108
    literal_numerico       go to state 109
    operandos_aritmeticos  go to state 117
    expressao_aritmetica   go to state 110


State 71

   83 expressao_aritmetica: '*' . operandos_aritmeticos

    TK_LIT_INT        shift, and go to state 62
    TK_LIT_FLOAT      shift, and go to state 63
    TK_IDENTIFICADOR  shift, and go to state 113
    '&'               shift, and go to state 68
    '+'               shift, and go to state 69
    '-'               shift, and go to state 70
    '*'               shift, and go to state 71
    '#'               shift, and go to state 72
    '('               shift, and go to state 114

    chamada_de_funcao      go to state 108
    literal_numerico       go to state 109
    operandos_aritmeticos  go to state 118
    expressao_aritmetica   go to state 110


State 72

   84 expressao_aritmetica: '#' . operandos_aritmeticos

    TK_LIT_INT        shift, and go to state 62
    TK_LIT_FLOAT      shift, and go to state 63
    TK_IDENTIFICADOR  shift, and go to state 113
    '&'               shift, and go to state 68
    '+'               shift, and go to state 69
    '-'               shift, and go to state 70
    '*'               shift, and go to state 71
    '#'               shift, and go to state 72
    '('               shift, and go to state 114

    chamada_de_funcao      go to state 108
    literal_numerico       go to state 109
    operandos_aritmeticos  go to state 119
    expressao_aritmetica   go to state 110


State 73

   99 expressao_booleana: '!' . operandos_booleanos

    TK_LIT_INT        shift, and go to state 62
    TK_LIT_FLOAT      shift, and go to state 63
    TK_LIT_FALSE      shift, and go to state 64
    TK_LIT_TRUE       shift, and go to state 65
    TK_IDENTIFICADOR  shift, and go to state 107
    '?'               shift, and go to state 67
    '&'               shift, and go to state 68
    '+'               shift, and go to state 69
    '-'               shift, and go to state 70
    '*'               shift, and go to state 71
    '#'               shift, and go to state 72
    '!'               shift, and go to state 73
    '('               shift, and go to state 74

    chamada_de_funcao      go to state 108
    literal_numerico       go to state 109
    operandos_aritmeticos  go to state 77
    expressao_aritmetica   go to state 110
    literal_booleano       go to state 79
    operandos_booleanos    go to state 120
    expressao_booleana     go to state 112


State 74

   79 operandos_aritmeticos: '(' . expressao_aritmetica ')'
   98 operandos_booleanos: '(' . expressao_booleana ')'

    TK_LIT_INT        shift, and go to state 62
    TK_LIT_FLOAT      shift, and go to state 63
    TK_LIT_FALSE      shift, and go to state 64
    TK_LIT_TRUE       shift, and go to state 65
    TK_IDENTIFICADOR  shift, and go to state 107
    '?'               shift, and go to state 67
    '&'               shift, and go to state 68
    '+'               shift, and go to state 69
    '-'               shift, and go to state 70
    '*'               shift, and go to state 71
    '#'               shift, and go to state 72
    '!'               shift, and go to state 73
    '('               shift, and go to state 74

    chamada_de_funcao      go to state 108
    literal_numerico       go to state 109
    operandos_aritmeticos  go to state 77
    expressao_aritmetica   go to state 121
    literal_booleano       go to state 79
    operandos_booleanos    go to state 80
    expressao_booleana     go to state 122


State 75

   76 operandos_aritmeticos: chamada_de_funcao .
  110 expressao: chamada_de_funcao .

    '?'       reduce using rule 110 (expressao)
    ':'       reduce using rule 110 (expressao)
    ']'       reduce using rule 110 (expressao)
    ';'       reduce using rule 110 (expressao)
    ','       reduce using rule 110 (expressao)
    ')'       reduce using rule 110 (expressao)
    $default  reduce using rule 76 (operandos_aritmeticos)


State 76

   75 operandos_aritmeticos: literal_numerico .
  111 expressao: literal_numerico .

    '?'       reduce using rule 111 (expressao)
    ':'       reduce using rule 111 (expressao)
    ']'       reduce using rule 111 (expressao)
    ';'       reduce using rule 111 (expressao)
    ','       reduce using rule 111 (expressao)
    ')'       reduce using rule 111 (expressao)
    $default  reduce using rule 75 (operandos_aritmeticos)


State 77

   85 expressao_aritmetica: operandos_aritmeticos . '+' operandos_aritmeticos
   86                     | operandos_aritmeticos . '-' operandos_aritmeticos
   87                     | operandos_aritmeticos . '^' operandos_aritmeticos
   88                     | operandos_aritmeticos . '*' operandos_aritmeticos
   89                     | operandos_aritmeticos . '/' operandos_aritmeticos
   90                     | operandos_aritmeticos . '%' operandos_aritmeticos
   91                     | operandos_aritmeticos . '&' operandos_aritmeticos
   92                     | operandos_aritmeticos . '|' operandos_aritmeticos
  101 expressao_booleana: operandos_aritmeticos . '<' operandos_aritmeticos
  102                   | operandos_aritmeticos . '>' operandos_aritmeticos
  103                   | operandos_aritmeticos . TK_OC_EQ operandos_aritmeticos
  104                   | operandos_aritmeticos . TK_OC_NE operandos_aritmeticos
  105                   | operandos_aritmeticos . TK_OC_GE operandos_aritmeticos
  106                   | operandos_aritmeticos . TK_OC_LE operandos_aritmeticos

    TK_OC_LE  shift, and go to state 123
    TK_OC_GE  shift, and go to state 124
    TK_OC_EQ  shift, and go to state 125
    TK_OC_NE  shift, and go to state 126
    '<'       shift, and go to state 127
    '>'       shift, and go to state 128
    '&'       shift, and go to state 129
    '|'       shift, and go to state 130
    '+'       shift, and go to state 131
    '-'       shift, and go to state 132
    '*'       shift, and go to state 133
    '/'       shift, and go to state 134
    '%'       shift, and go to state 135
    '^'       shift, and go to state 136


State 78

   78 operandos_aritmeticos: expressao_aritmetica .
  112 expressao: expressao_aritmetica .

    '?'       reduce using rule 112 (expressao)
    ':'       reduce using rule 112 (expressao)
    ']'       reduce using rule 112 (expressao)
    ';'       reduce using rule 112 (expressao)
    ','       reduce using rule 112 (expressao)
    ')'       reduce using rule 112 (expressao)
    $default  reduce using rule 78 (operandos_aritmeticos)


State 79

   96 operandos_booleanos: literal_booleano .

    $default  reduce using rule 96 (operandos_booleanos)


State 80

  107 expressao_booleana: operandos_booleanos . TK_OC_AND operandos_booleanos
  108                   | operandos_booleanos . TK_OC_OR operandos_booleanos

    TK_OC_AND  shift, and go to state 137
    TK_OC_OR   shift, and go to state 138


State 81

   97 operandos_booleanos: expressao_booleana .
  113 expressao: expressao_booleana .

    TK_OC_AND  reduce using rule 97 (operandos_booleanos)
    TK_OC_OR   reduce using rule 97 (operandos_booleanos)
    $default   reduce using rule 113 (expressao)


State 82

   64 retorno: TK_PR_RETURN expressao .
  114 expressao: expressao . '?' expressao ':' expressao

    '?'  shift, and go to state 139

    $default  reduce using rule 64 (retorno)


State 83

   71 for: TK_PR_FOR '(' . atribuicao ':' expressao ':' atribuicao ')' bloco_cmd
